--- a/src/gadget.html
+++ b/src/gadget.html
@@ -10,6 +10,7 @@
   <link id="css" href="style.css" rel="stylesheet" type="text/css" />
   <script src="prototype.js" type="text/javascript"></script>
   <script src="core.js" type="text/javascript"></script>
+  <script src="gadget.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="background">
