Change license to GPL for iCalReader.js. Add facility of version check.

--- a/src/gadget.html
+++ b/src/gadget.html
@@ -9,6 +9,9 @@
   <meta http-equiv="Content-Style-Type" content="text/css" />
   <link id="css" href="style.css" rel="stylesheet" type="text/css" />
   <script src="prototype.js" type="text/javascript"></script>
+  <script src="iCalReader.js" type="text/javascript"></script>
+  <script src="alert.vbs" type="text/vbscript"></script>
+  <script src="ical_utility.js" type="text/javascript"></script>
   <script src="core.js" type="text/javascript"></script>
   <script src="gadget.js" type="text/javascript"></script>
 </head>
